import java.nio.charset.StandardCharsets
import java.nio.file.Files
import java.nio.file.StandardCopyOption

plugins {
    id 'java-library'
    id 'net.neoforged.moddev' version '2.0.143'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    maven { url = "https://maven.ryanhcode.dev/releases" } // Sable
    maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
    maven { url = "https://maven.gegy.dev/releases" } // Registrate
    maven { url = "https://maven.blamejared.com" } // JEI
    maven { url = "https://cursemaven.com" }
    maven { url = "https://api.modrinth.com/maven" } // Simple Bedrock Model
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    version = project.neo_version

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        clientData {
            type = "clientData"
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

def LangReplacements = [
        '空中厕所'    : '空中卫生间',
        '大便失禁'    : '巧克力喷泉',
        '恶兆污秽'    : '悦动甜蜜',
        '马桶搋子'    : '魔女扫帚',
        '马桶制杖'    : '魔女法杖',
        '食粪者'      : '小谗鬼',
        '养粪人'      : '甜品师',
        '一切屎于脚下': '一切食于脚下',
        '屎溅之铃'    : '时间之铃',
        '屎'          : '巧克力',
        '粪水'        : '巧克力液',
        '化粪'        : '巧克力化',
        '挑粪匠'      : '高能饮品',
        '蛆块链'      : '曲块链',
        '寄生虫'      : '花朵快快长',
        '蛔虫'        : '白巧克力棒',
        '苍蝇'        : '暗色蜜蜂',
        '厕所'        : '巧克力礼盒',
        '马桶'        : '葡萄酒杯',
        '蛆'          : '牛奶巧克力',
        '粪便'        : '巧克力',
        '粪'          : '巧克力',
        '大便'        : '草莓塔',
        '蝇'          : '蜂',
        '忌讳'        : '甜蜜',
        '肛气'        : '氨气',
        '屁声'        : '排气声',
        '如厕'        : '出恭',
        '尿'          : '茶水'
]

def generateLang = tasks.register('generateLang') {
    group = 'data generation'

    def sourceFile = layout.projectDirectory.file('src/main/resources/assets/poopsky/lang/zh_cn.json')
    def outputFile = layout.projectDirectory.file('src/main/resources/resourcepacks/poopsky_pack/assets/poopsky/lang/zh_cn.json')

    inputs.file sourceFile
    inputs.property 'replacements', LangReplacements.collect { source, replacement ->
        "${source}\u0000${replacement}"
    }
    outputs.file outputFile

    doLast {
        def sourcePath = sourceFile.asFile.toPath()
        def outputPath = outputFile.asFile.toPath()
        Files.createDirectories(outputPath.parent)
        Files.copy(sourcePath, outputPath, StandardCopyOption.REPLACE_EXISTING)

        def content = Files.readString(outputPath, StandardCharsets.UTF_8)
        if (content.startsWith('\uFEFF')) {
            content = content.substring(1)
        }
        LangReplacements.each { source, replacement ->
            content = content.replace(source, replacement)
        }
        Files.writeString(outputPath, content, StandardCharsets.UTF_8)
    }
}

tasks.named('runClientData').configure {
    dependsOn generateLang
}

tasks.register('runData') {
    group = 'data generation'
    dependsOn tasks.named('runClientData')
}

tasks.named('processResources').configure {
    dependsOn generateLang
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

// 机械动力的还在移植，用不了，先排除编译！
sourceSets {
    main {
        java {
            exclude 'com/altnoir/poopsky/compat/create'
            exclude 'com/altnoir/poopsky/compat/jei/create'
        }
    }
}

dependencies {
    // JEI
    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    localRuntime "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
    // Create 机械动力的还在移植，用不了，先注释了
/*    implementation("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
    implementation("net.createmod.ponder:Ponder-NeoForge-${minecraft_version}:${ponder_version}")
    compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}")
    runtimeOnly("dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}")*/
    implementation jarJar("com.tterrag.registrate:Registrate:${registrate_version}")
    implementation "com.maydaymemory:mae:1.1.4"
    implementation(files("libs/simplebedrockmodel-2.5.0-neoforge-mc26.1.jar"))
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(ProcessResources).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
